--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
 
   <body>
-      <h1>Hello there, awesome person!</h1>
+<img src="https://avatars.githubusercontent.com/u/89427763?v=4">
+
   </body>
 
 </html>
