--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <ol>
     <li>animflv</li>
     <li>fb</li>
-    <li>youtube</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ol>
 
 
